Added --with-mp3 option to convert files to mp3.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sounds"]
 	path = sounds
 	url = https://github.com/Ungaminga/TES-L-Localizated-Sounds.git
+[submodule "mp3"]
+	path = mp3
+	url = https://github.com/Ungaminga/TES-L-Localizated-Sounds-MP3.git
